Só arrumando os titulos da KPI

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -365,7 +365,7 @@
                 <div class="primeira-kpi">
 
                     <div class="titulo-kpi">
-                        <h1>Índice de Satisfação Ambiental</h1>
+                        <h1>Índice de Satisfação Ambiental (últimos 30 dias)</h1>
                     </div>
 
                     <div class="dado-kpi">
@@ -430,7 +430,7 @@
                 <div class="terceira-kpi">
 
                     <div class="titulo-kpi">
-                        <h1>Total de Comentários (Últimos 30 Dias)</h1>
+                        <h1>Região mais comentada (Últimos 30 Dias)</h1>
                     </div>
 
                     <div class="dado-kpi">
@@ -446,7 +446,7 @@
                 <div class="primeira-kpi">
 
                     <div class="titulo-kpi">
-                        <h1>Índice de Satisfação Ambiental</h1>
+                        <h1>Índice de Satisfação Ambiental (últimos 30 dias)</h1>
                     </div>
 
                     <div class="dado-kpi">
@@ -511,7 +511,7 @@
                 <div class="terceira-kpi">
 
                     <div class="titulo-kpi">
-                        <h1>Total de Comentários (Últimos 30 Dias)</h1>
+                        <h1>Região mais comentada (Últimos 30 Dias)</h1>
                     </div>
 
                     <div class="dado-kpi">
