--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -487,7 +487,7 @@
 
 </html>
 
-<script src="./js/index.js"></script>
+<script type="module" src="./js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
