--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -243,18 +243,18 @@
 						<div class="contem-escolhe-filtro">
 							<select name="" class="select-opt" id="mesDesejado">
 								<option></option>
-								<option value="01">Janeiro</option>
-								<option value="02">Fevereiro</option>
-								<option value="03">Março</option>
-								<option value="04">Abril</option>
-								<option value="05">Maio</option>
-								<option value="06">Junho</option>
-								<option value="07">Julho</option>
-								<option value="08">Agosto</option>
-								<option value="09">Setembro</option>
-								<option value="10">Outubro</option>
-								<option value="11">Novembro</option>
-								<option value="12">Dezembro</option>
+								<option value="jan">Janeiro</option>
+								<option value="fev">Fevereiro</option>
+								<option value="mar">Março</option>
+								<option value="abr">Abril</option>
+								<option value="mai">Maio</option>
+								<option value="jun">Junho</option>
+								<option value="jul">Julho</option>
+								<option value="ago">Agosto</option>
+								<option value="set">Setembro</option>
+								<option value="out">Outubro</option>
+								<option value="nov">Novembro</option>
+								<option value="dez">Dezembro</option>
 							</select>
 						</div>
 					</div>
@@ -340,18 +340,18 @@
 						<div class="contem-escolhe-filtro">
 							<select name="" class="select-opt" id="mesDesejadoEditar">
 								<option></option>
-								<option value="01">Janeiro</option>
-								<option value="02">Fevereiro</option>
-								<option value="03">Março</option>
-								<option value="04">Abril</option>
-								<option value="05">Maio</option>
-								<option value="06">Junho</option>
-								<option value="07">Julho</option>
-								<option value="08">Agosto</option>
-								<option value="09">Setembro</option>
-								<option value="10">Outubro</option>
-								<option value="11">Novembro</option>
-								<option value="12">Dezembro</option>
+								<option value="jan">Janeiro</option>
+								<option value="fev">Fevereiro</option>
+								<option value="mar">Março</option>
+								<option value="abr">Abril</option>
+								<option value="mai">Maio</option>
+								<option value="jun">Junho</option>
+								<option value="jul">Julho</option>
+								<option value="ago">Agosto</option>
+								<option value="set">Setembro</option>
+								<option value="out">Outubro</option>
+								<option value="nov">Novembro</option>
+								<option value="dez">Dezembro</option>
 							</select>
 						</div>
 					</div>
