Eu e a Shiy1rl3eiy a dash muda de acordo com a persona e se for respira sp tem um botao pro admin ver o que ele quiser

--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -157,7 +157,7 @@
 
 	<div class="container">
 
-		<div class="persona-switcher" style="position: fixed; bottom: 20px; right: 20px;">
+		<div id="switch-persona" class="persona_switcher" style="position: fixed; bottom: 20px; right: 20px;">
 			<button onclick="switchPersona('saude')">Modo Saúde</button>
 			<button onclick="switchPersona('ambiental')">Modo Ambiental</button>
 		</div>
