Pode acessar o cadastrar empresas pela navbar e botão para ver empresas

--- a/site/public/cadastroPersona.html
+++ b/site/public/cadastroPersona.html
@@ -46,6 +46,9 @@
 			<a class="nav-selected" onclick="goToCadastrar()">
 				Cadastrar
 			</a>
+			<a onclick="goToEmpresas()">
+				Empresas
+			</a>
 			<div onclick="showNotifications()" class="contem-alerta">
 				<div class="img-nav-alerta2">
 					<img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png" alt="Imagem de Notificações">
