--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -48,6 +48,9 @@
 			<a onclick="goToCadastrar()">
 				Cadastrar
 			</a>
+			<a onclick="goToEmpresas()">
+				Empresas
+			</a>
 			<div onclick="showNotifications()" class="contem-alerta">
 				<div class="img-nav-alerta2">
 					<img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png" alt="Imagem de Notificações">
