--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -43,6 +43,9 @@
 			<a onclick="goToCadastrar()">
 				Cadastrar
 			</a>
+			<a onclick="goToEmpresas()">
+				Empresas
+			</a>
 			<div onclick="showNotifications()" class="contem-alerta">
 				<div class="img-nav-alerta2">
 					<img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png" alt="Imagem de Notificações">
@@ -492,3 +495,4 @@
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/navegarSite.js"></script>
+
