--- a/site/public/cadastroEmpresa.html
+++ b/site/public/cadastroEmpresa.html
@@ -52,37 +52,7 @@
             <a onclick="goToCadastrar()">
                 Cadastrar
             </a>
-            <div onclick="showNotifications()" class="contem-alerta">
-                <div class="img-nav-alerta2">
-                    <img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png"
-                        alt="Imagem de Notificações">
-                </div>
-                <a>
-                    Notificações
-                </a>
-                <div class="notification-dropdown">
-                    <div class="notification-dropdown-options">
-                        <div class="notification-container">
-                            <span>27/02/2025 13:26</span>
-                            <button>
-                                Acontecimento muito louco doido explodiu tudo
-                            </button>
-                        </div>
-                        <div class="notification-container">
-                            <span>27/02/2025 13:26</span>
-                            <button>
-                                Acontecimento muito louco doido explodiu tudo
-                            </button>
-                        </div>
-                        <div class="notification-container">
-                            <span>27/02/2025 13:26</span>
-                            <button>
-                                Acontecimento muito louco doido explodiu tudo
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           
 
         </div>
         <div onclick="showUserOptions()" class="user-container" style="display: none;">
@@ -238,8 +208,9 @@
         <div onclick="cadastrarEmpresa()" id="botaoCadastrar" class="botao-cadastrar">
             <h3>CADASTRAR</h3>
         </div>
-
-
+       <div onclick="verEmpresas()" id="botaoCadastrar" class="botao-cadastrar">
+            <h3>VER EMPRESAS</h3>
+        </div>
 
     </div>
 
@@ -252,3 +223,9 @@
 <script src="./js/script.js"></script>
 <script src="./js/navegarSite.js"></script>
 <script src="./js/cadastroEmpresa.js"></script>
+
+<script>
+    function verEmpresas(){
+        location.replace("/verEmpresas.html");
+    }
+</script>
