correcoes no index

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -179,7 +179,7 @@
   </div>
   <div class="historia" id="historia">
     <div class="history-row">
-      <img class="pessoas" src="https://www.sptech.school/assets/images/logos/sptech_logo_negativa_1.png" alt="Logo da SpTech"/>
+      <img class="pessoas" src="./assets/sptech.png" alt="Logo da SpTech"/>
       <div class="history-column">
           <h1>Nossa <span style="color: var(--primary-green);">História</span></h1>
           <p>
