--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -160,11 +160,11 @@
 
 	<div class="container">
 
-		<div id="switch-persona" class="persona_switcher" style="position: fixed; bottom: 20px; right: 20px;">
-			<button onclick="switchPersona('saude')">Modo Saúde</button>
-			<button onclick="switchPersona('ambiental')">Modo Ambiental</button>
-		</div>
-
+		<!-- <div id="switch-persona" class="persona_switcher" style="position: fixed; bottom: 20px; right: 20px;"> -->
+		<!-- 	<button onclick="switchPersona('saude')">Modo Saúde</button> -->
+		<!-- 	<button onclick="switchPersona('ambiental')">Modo Ambiental</button> -->
+		<!-- </div> -->
+		<!---->
 		<div class="filtro">
 
 			<div class="filtroSelecionado">
@@ -495,4 +495,3 @@
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/navegarSite.js"></script>
-
