--- a/site/public/feedback.html
+++ b/site/public/feedback.html
@@ -24,7 +24,7 @@
       melhor.</p>
     <button id="close-modal">Concluído</button>
   </div>
-  <div id="sideBar" class="side-bar">
+<!--   <div id="sideBar" class="side-bar">
     <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
     <div class="side-bar-links-container">
       <a onclick="goToHistory(); openSidebar();">
@@ -84,7 +84,7 @@
             d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zM2 1a1 1 0 0 0-1 1v1h14V2a1 1 0 0 0-1-1zM1 4v10a1 1 0 0 0 1 1h2V4zm4 0v11h9a1 1 0 0 0 1-1V4z" />
         </svg>
       </button>
-    </div>
+    </div> -->
     <div class="feedback-content">
       <h1>
         Como você classificaria o <span>ar</span> de hoje ?
